--- a/service/static/index.html
+++ b/service/static/index.html
@@ -1,112 +1,201 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Wishlist Admin UI</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="static/images/newapp-icon.png">
-    <link rel="stylesheet" href="static/css/darkly_bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/wishlist.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="page-header">
-          <h1>Wishlist Management</h1>
-      </div>
 
-      <!-- Flash Message -->
-      <div class="table-responsive">
-        <table class="table">
-          <tr><td>Status:</td><td><span id="flash_message"></span></td></tr>
-        </table>
-      </div>
+<head>
+  <title>Wishlist Admin UI</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="static/images/newapp-icon.png">
+  <link rel="stylesheet" href="static/css/darkly_bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/wishlist.css">
+</head>
 
-      <!-- FORM -->
-      <div class="col-md-12" id="form_data">
-        <h3>Create, Retrieve, Update, and Delete a Wishlist:</h3>
+<body>
+  <div class="container">
+    <div class="page-header">
+      <h1>Wishlist Management</h1>
+    </div>
+
+    <!-- Flash Message -->
+    <div class="table-responsive">
+      <table class="table">
+        <tr>
+          <td>Status:</td>
+          <td><span id="flash_message"></span></td>
+        </tr>
+      </table>
+    </div>
+
+    <!-- FORM -->
+    <div class="col-md-12" id="form_data">
+      <h3>Create, Retrieve, Update, and Delete a Wishlist:</h3>
+      <div class="well">
+        <div class="form-horizontal">
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="wishlist_id">Wishlist ID:</label>
+            <div class="col-sm-6">
+              <input type="text" class="form-control" id="wishlist_id" placeholder="Enter ID of Wishlist">
+            </div>
+            <div class="col-sm-4">
+              <button type="submit" class="btn btn-primary" id="retrieve-btn">Retrieve</button>
+              <button type="submit" class="btn btn-danger" id="delete-btn">Delete</button>
+            </div>
+          </div>
+        </div> <!-- form horizontal -->
+
+        <div class="form-horizontal">
+
+          <!-- NAME -->
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="wishlist_name">Name:</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="wishlist_name" placeholder="Enter name for Wishlist">
+            </div>
+          </div>
+
+          <!-- CUSTOMER ID -->
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="wishlist_customer_id">Customer Id:</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="wishlist_customer_id"
+                placeholder="Enter customer id for Wishlist">
+            </div>
+          </div>
+
+          <!-- IS PUBLIC -->
+          <div class="form-group">
+            <label class="control-label col-sm-2" for="wishlist_is_public">Public:</label>
+            <div class="col-sm-10">
+              <input type="checkbox" class="form-control wishlist-checkbox" id="wishlist_is_public">
+            </div>
+          </div>
+
+
+          <!-- SUBMIT BUTTONS -->
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn btn-primary" id="search-btn">Search by Customer ID</button>
+              <button type="submit" class="btn btn-primary" id="clear-btn">Clear</button>
+              <button type="submit" class="btn btn-success" id="create-btn">Create</button>
+              <button type="submit" class="btn btn-warning" id="update-btn">Update</button>
+            </div>
+          </div>
+        </div> <!-- form horizontal -->
+      </div> <!-- end well -->
+    </div> <!-- end Form -->
+
+    <!-- Search Results -->
+    <h3>Wishlist Search Results</h3>
+    <div class="table-responsive col-md-12" id="search_results">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th class="col-md-1">ID</th>
+            <th class="col-md-4">Name</th>
+            <th class="col-md-4">Customer ID</th>
+            <th class="col-md-3">Is Public</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+
+    <section id="wishlist-item-section">
+      <div class="col-md-12" id="wishlist-item-form">
+        <h3>Create, Retrieve, Update, and Delete a Wishlist Item:</h3>
         <div class="well">
           <div class="form-horizontal">
             <div class="form-group">
-              <label class="control-label col-sm-2" for="wishlist_id">Wishlist ID:</label>
+              <label class="control-label col-sm-2" for="item_id">Item ID:</label>
               <div class="col-sm-6">
-                <input type="text" class="form-control" id="wishlist_id" placeholder="Enter ID of Wishlist">
+                <input type="text" class="form-control" id="item_id" placeholder="Enter ID of Wishlist Item">
               </div>
               <div class="col-sm-4">
-                <button type="submit" class="btn btn-primary" id="retrieve-btn">Retrieve</button>
-                <button type="submit" class="btn btn-danger" id="delete-btn">Delete</button>
+                <button type="submit" class="btn btn-primary" id="retrieve-item-btn">Retrieve</button>
+                <button type="submit" class="btn btn-danger" id="delete-item-btn">Delete</button>
               </div>
             </div>
           </div> <!-- form horizontal -->
 
           <div class="form-horizontal">
 
-            <!-- NAME -->
+            <!-- PRODUCT ID -->
             <div class="form-group">
-              <label class="control-label col-sm-2" for="wishlist_name">Name:</label>
+              <label class="control-label col-sm-2" for="item_name">Product ID:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="wishlist_name" placeholder="Enter name for Wishlist">
+                <input type="text" class="form-control" id="item_product_id" placeholder="Enter Product ID">
               </div>
             </div>
 
-            <!-- CUSTOMER ID -->
+            <!-- PRODUCT NAME -->
             <div class="form-group">
-              <label class="control-label col-sm-2" for="wishlist_customer_id">Customer Id:</label>
+              <label class="control-label col-sm-2" for="item_product_name">Product Name:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="wishlist_customer_id" placeholder="Enter customer id for Wishlist">
+                <input type="text" class="form-control" id="item_product_name" placeholder="Enter Product Name">
               </div>
             </div>
 
-            <!-- IS PUBLIC -->
+            <!-- PRODUCT PRICE -->
             <div class="form-group">
-              <label class="control-label col-sm-2" for="wishlist_is_public">Public:</label>
+              <label class="control-label col-sm-2" for="item_price">Price:</label>
               <div class="col-sm-10">
-                <input type="checkbox" class="form-control wishlist-checkbox" id="wishlist_is_public">
+                <input type="text" class="form-control" id="item_price"
+                  placeholder="Enter price">
               </div>
             </div>
 
+            <!-- QUANTITY -->
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="item_quantity">Quantity:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="item_quantity"
+                  placeholder="Enter quantity">
+              </div>
+            </div>
 
             <!-- SUBMIT BUTTONS -->
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary" id="search-btn">Search</button>
-                <button type="submit" class="btn btn-primary" id="clear-btn">Clear</button>
-                <button type="submit" class="btn btn-success" id="create-btn">Create</button>
-                <button type="submit" class="btn btn-warning" id="update-btn">Update</button>
+                <button type="submit" class="btn btn-primary" id="item-search-btn">Search</button>
+                <button type="submit" class="btn btn-primary" id="item-clear-btn">Clear</button>
+                <button type="submit" class="btn btn-success" id="item-create-btn">Create</button>
+                <button type="submit" class="btn btn-warning" id="item-update-btn">Update</button>
               </div>
             </div>
           </div> <!-- form horizontal -->
         </div> <!-- end well -->
       </div> <!-- end Form -->
 
-      <!-- Search Results -->
-      <div class="table-responsive col-md-12" id="search_results">
-        <table class="table table-striped">
-          <thead>
+      <h2>Wishlist Items</h2>
+      <table id="wishlist-items-table" class="table table-striped">
+        <thead>
           <tr>
             <th class="col-md-1">ID</th>
-            <th class="col-md-4">Name</th>
-            <th class="col-md-4">Category</th>
-            <th class="col-md-3">Available</th>
-            <th class="col-md-3">Gender</th>
-            <th class="col-md-3">Birthday</th>
+            <th class="col-md-4">Product ID</th>
+            <th class="col-md-4">Product Name</th>
+            <th class="col-md-3">Product Price</th>
+            <th class="col-md-3">Quantity</th>
           </tr>
-          </thead>
-        </table>
-      </div>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
 
-      <footer>
-        <br><br>
-        <p>&copy; NYU DevOps Business Company 2023</p>
-      </footer>
+    </section>
 
-    </div> <!-- container -->
+    <footer>
+      <br><br>
+      <p>&copy; NYU DevOps Business Company 2023</p>
+    </footer>
 
-  <script type="text/javascript" src = "static/js/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src = "static/js/bootstrap.min.js"></script>
+  </div> <!-- container -->
+
+  <script type="text/javascript" src="static/js/jquery-3.6.0.min.js"></script>
+  <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
 
   <!-- YOUR REST API -->
   <script type="text/javascript" src="static/js/rest_api.js"></script>
 
-  </body>
+</body>
+
 </html>
