--- a/service/static/index.html
+++ b/service/static/index.html
@@ -127,6 +127,14 @@
               </div>
             </div>
 
+            <!-- WISHLIST ID -->
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="item_name">Wishlist ID:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="item_product_id" placeholder="Enter Wishlist ID">
+              </div>
+            </div>
+
             <!-- PRODUCT NAME -->
             <div class="form-group">
               <label class="control-label col-sm-2" for="item_product_name">Product Name:</label>
