Reorders form to put wishlist id above product id.

--- a/service/static/index.html
+++ b/service/static/index.html
@@ -119,19 +119,19 @@
 
           <div class="form-horizontal">
 
-            <!-- PRODUCT ID -->
-            <div class="form-group">
-              <label class="control-label col-sm-2" for="item_name">Product ID:</label>
-              <div class="col-sm-10">
-                <input type="text" class="form-control" id="item_product_id" placeholder="Enter Product ID">
-              </div>
-            </div>
-
             <!-- WISHLIST ID -->
             <div class="form-group">
               <label class="control-label col-sm-2" for="item_name">Wishlist ID:</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="item_product_id" placeholder="Enter Wishlist ID">
+              </div>
+            </div>
+
+            <!-- PRODUCT ID -->
+            <div class="form-group">
+              <label class="control-label col-sm-2" for="item_name">Product ID:</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="item_product_id" placeholder="Enter Product ID">
               </div>
             </div>
 
@@ -147,8 +147,7 @@
             <div class="form-group">
               <label class="control-label col-sm-2" for="item_price">Price:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="item_price"
-                  placeholder="Enter price">
+                <input type="text" class="form-control" id="item_price" placeholder="Enter price">
               </div>
             </div>
 
@@ -156,8 +155,7 @@
             <div class="form-group">
               <label class="control-label col-sm-2" for="item_quantity">Quantity:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="item_quantity"
-                  placeholder="Enter quantity">
+                <input type="text" class="form-control" id="item_quantity" placeholder="Enter quantity">
               </div>
             </div>
 
