--- a/service/static/index.html
+++ b/service/static/index.html
@@ -100,19 +100,19 @@
       </table>
     </div>
 
+    <!-- ************** -->
+    <!-- WISHLIST ITEMS -->
+    <!-- ************** -->
+
     <section id="wishlist-item-section">
       <div class="col-md-12" id="wishlist-item-form">
-        <h3>Create, Retrieve, Update, and Delete a Wishlist Item:</h3>
+        <h3>Wishlist Item Form:</h3>
         <div class="well">
           <div class="form-horizontal">
             <div class="form-group">
               <label class="control-label col-sm-2" for="item_id">Item ID:</label>
-              <div class="col-sm-6">
+              <div class="col-sm-10">
                 <input type="text" class="form-control" id="item_id" placeholder="Enter ID of Wishlist Item">
-              </div>
-              <div class="col-sm-4">
-                <button type="submit" class="btn btn-primary" id="retrieve-item-btn">Retrieve</button>
-                <button type="submit" class="btn btn-danger" id="delete-item-btn">Delete</button>
               </div>
             </div>
           </div> <!-- form horizontal -->
@@ -177,10 +177,11 @@
         <thead>
           <tr>
             <th class="col-md-1">ID</th>
-            <th class="col-md-4">Product ID</th>
-            <th class="col-md-4">Product Name</th>
-            <th class="col-md-3">Product Price</th>
-            <th class="col-md-3">Quantity</th>
+            <th class="col-md-1">Product ID</th>
+            <th class="col-md-3">Product Name</th>
+            <th class="col-md-2">Product Price</th>
+            <th class="col-md-1">Quantity</th>
+            <th class="col-md-3">Actions</th>
           </tr>
         </thead>
         <tbody>
