Adds wishlist item form clearing and population after clicking on item edit button

--- a/service/static/index.html
+++ b/service/static/index.html
@@ -121,15 +121,15 @@
 
             <!-- WISHLIST ID -->
             <div class="form-group">
-              <label class="control-label col-sm-2" for="item_name">Wishlist ID:</label>
+              <label class="control-label col-sm-2" for="item_wishlist_id">Wishlist ID:</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control" id="item_product_id" placeholder="Enter Wishlist ID">
+                <input type="text" class="form-control" id="item_wishlist_id" placeholder="Enter Wishlist ID">
               </div>
             </div>
 
             <!-- PRODUCT ID -->
             <div class="form-group">
-              <label class="control-label col-sm-2" for="item_name">Product ID:</label>
+              <label class="control-label col-sm-2" for="item_product_id">Product ID:</label>
               <div class="col-sm-10">
                 <input type="text" class="form-control" id="item_product_id" placeholder="Enter Product ID">
               </div>
